<resources>
    <string name="app_name">KnittyBuddy</string>
    <string name="go_back">Go back</string>
    <string name="add_project">Add project</string>
    <string name="add_new">Add new</string>
    <string name="my_projects">My projects</string>
    <string name="project_name">Project name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="publish">Publish</string>
    <string name="pdf">PDF</string>
    <string name="delete">Delete</string>
    <string name="inspiration_description">Inspiration description</string>
    <string name="inspiration">Inspiration</string>
    <string name="openPdf">Opens PDF file</string>
    <string name="unpublish">Undo publish</string>
    <string name="Save">Save</string>
    <string name="enterProjectName">Enter project name here</string>
    <string name="enterDescription">Enter discription here</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="username">Username</string>
    <string name="description">Project description</string>
    <string name="SearchHint" />
    <string name="InspiHint">Search...</string>
    <string name="detail_name">Name of pattern</string>
    <string name="detail_author">Name of author</string>
    <string name="starAdded">You stared a project!</string>
    <string name="starRemoved">A star is removed</string>
    <string name="provideProjectName">You must provide a project name!</string>
    <string name="projectCreated">Project created</string>
    <string name="changesSaves">Changes saved</string>
    <string name="backWithoutSave">Are you sure you want to go back without saving the changes?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="deleteProject">Are you sure you want to delete this project?</string>
    <string name="projectDeleted">Project deleted</string>
    <string name="projectPublished">Your project is now published</string>
    <string name="publishedRemoved">Your project is not longer published</string>
    <string name="myProjects">My projects</string>
    <string name="notiPublishedProjects">Get inspiration from others! Take a look at this project</string>
    <string name="notiBy">, made by:</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="registerHere">Register for KnittyBuddy!</string>
    <string name="fullname">Full name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="passwordreqSix">Password must be atleast 6 characters</string>
    <string name="mainNoti">Will be updated with random projects for inspiration</string>
    <string name="emailReq">Email is required</string>
    <string name="emailVal">Email must be valid</string>
    <string name="passwordReq">Password is required</string>
    <string name="loginFail">Login failed. Please try again!</string>
    <string name="fullnameReq">Full name is required</string>
    <string name="userCreated">User has successfully been created</string>
    <string name="searchTerm">Please input a search term</string>
</resources>