<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".inspiration.InspirationListActivity">


    <TextView
        android:id="@+id/InspirationListHeaderText"
        style="@style/textFieldStyle"
        android:layout_width="188dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_squared_shape_dark"
        android:gravity="center"
        android:text="@string/my_projects"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/inspiration" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inspirationRcView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/InspirationListHeaderText"
        app:layout_constraintStart_toStartOf="@+id/InspirationListHeaderText"
        app:layout_constraintTop_toBottomOf="@+id/InspirationListHeaderText"
        tools:itemCount="10"
        tools:listitem="@layout/inspiration_list_item" />

    <Button
        android:id="@+id/btn_projectList_back"
        style="@style/buttonStyle"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/go_back" />

    <EditText
        android:id="@+id/inspirationSearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/btn_projectList_back"
        app:layout_constraintEnd_toStartOf="@+id/btn_projectList_back"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_projectList_back"
        app:layout_constraintVertical_bias="0.516"
        tools:text="@string/search" />


</androidx.constraintlayout.widget.ConstraintLayout>