<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_squared_shape_listitem">

    <TextView
        android:id="@+id/projectNameFeedList"
        style="@style/textFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/project_name"
        app:layout_constraintStart_toEndOf="@+id/projectImageFeedItem"
        app:layout_constraintTop_toTopOf="@+id/projectImageFeedItem" />

    <TextView
        android:id="@+id/userNameFeedList"
        style="@style/textFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/projectImageFeedItem"
        app:layout_constraintStart_toEndOf="@+id/projectImageFeedItem"
        app:layout_constraintTop_toBottomOf="@+id/projectNameFeedList" />

    <TextView
        android:id="@+id/projectDescriptionFeedList"
        style="@style/textFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectImageFeedItem" />

    <ImageView
        android:id="@+id/projectImageFeedItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>