<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".old.OldProjectListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_project_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ProjectListHeader" />

    <TextView
        android:id="@+id/txt_ProjectListHeader"
        style="@style/textFieldStyle"
        android:layout_width="188dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_squared_shape_dark"
        android:gravity="center"
        android:text="@string/my_projects"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/my_projects" />

    <Button
        android:id="@+id/btn_projectList_back"
        style="@style/buttonStyle"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/go_back" />

    <Button
        android:id="@+id/btn_project_addProject"
        style="@style/buttonStyle"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/add_new"
        app:layout_constraintBottom_toBottomOf="@+id/btn_projectList_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_projectList_back"
        tools:text="@string/add_new" />

</androidx.constraintlayout.widget.ConstraintLayout>